# waypoint_manager_ros

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: lint.yaml
launch/: rviz.rviz  test.launch  waypoint_manager.launch  waypoints.yaml
scripts/: waypoint_manager_node.py
