<?xml version="1.0"?>
<package format="3">
  <name>waypoint_manager_ros</name>
  <version>0.0.0</version>
  <description>The waypoint_manager_ros package</description>
  <maintainer email="tnakamura.amsl@gmail.com">Toshiki Nakamura</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>visualization_msgs</depend>
</package>
